fixed search bar text-align left

--- a/css/style.css
+++ b/css/style.css
@@ -137,7 +137,7 @@ form input[type="search"] {
     border-top-left-radius: 0;
     border-bottom-left-radius: 0;
     color: black;
-    text-align: center;
+    text-align: left;
     font-size: 1.125em;
     font-weight: 700;
     outline: none;
